--- a/style.css
+++ b/style.css
@@ -24,4 +24,12 @@ body{
     background-color: #eaeaea;
     margin: 0 auto;
     border: 5px;
+    padding-top: 200px;
+}
+#winagain{
+
+    width: 200px;
+    height: 50px;
+    background-color: bisque;
+    font-size: x-large;
 }
